--- a/client/src/resources/global.css
+++ b/client/src/resources/global.css
@@ -33,9 +33,6 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   width: 100%;
   max-width: 400px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
 .register-heading {
@@ -45,23 +42,64 @@
   font-size: 24px;
 }
 
-/* Form item styling (optional) */
-.ant-form-item {
-  width: 100%; /* Ensures form items take full width of the card */
-}
-
 /* Password fields styling */
 .password-container {
+  position: relative;
   display: flex;
   align-items: center;
   width: 100%;
 }
 
 .toggle-password {
-  background: none;
+  position: absolute;
+  right: 10px;
+  height: 100%;
   border: none;
+  background: none;
   cursor: pointer;
-  padding: 0;
-  margin-left: 1rem;
+  top: 50%;
+  transform: translateY(-50%);
   font-size: 16px;
+  padding: 0;
+}
+
+/* Style for all text input fields */
+input[type="text"],
+input[type="email"],
+input[type="password"] {
+  width: 100%;
+  padding: 0.5rem;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  font-size: 16px;
+  box-sizing: border-box;
+}
+
+/* buttons */
+.primary-btn {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 0.5rem 1rem;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.primary-btn:hover {
+  background-color: #0069d9;
+}
+
+.secondery-btn {
+  background-color: #6c757d;
+  color: white;
+  border: none;
+  padding: 0.5rem 1rem;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.secondery-btn:hover {
+  background-color: #5a6268;
 }
