--- a/client/src/resources/global.css
+++ b/client/src/resources/global.css
@@ -80,10 +80,11 @@ input[type="password"] {
   background-color: #007bff;
   color: white;
   border: none;
-  padding: 0.5rem 1rem;
+  padding: 0.5rem;
   border-radius: 4px;
   cursor: pointer;
   font-size: 16px;
+  margin: 0 auto;
 }
 
 .primary-btn:hover {
